--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="row home-content__main">
 
-                <h3>Hi</h3>
+                <h3>Hello</h3>
 
                 <h1>
                     I am Fazal Ilahi <br>
@@ -106,7 +106,7 @@
                 <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
+                <a href="https://github.com/fazalilahi666"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -120,7 +120,6 @@
         
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
-                <h3>About</h3>
                 <h1>More About Me</h1>
                 <p class="lead">.NET Developer | NodeJs Beginner | Machine Learning Enthusiast</p>
             </div>
@@ -128,15 +127,13 @@
 
         <div class="row about-content">
             <div class="col-six tab-full left">
-                <h3>I ...</h3>
+                <h3>Professional Experience...</h3>
 
-                <p> - am a .Net Core Developer </p>
-				<p>	- have been working with PostGres and oracle</p>
-				<p>	- am learning NodeJs...liking it actually<p>
-				<p>	- am currently exploring on Machine learning in my free time<p>
-				<p>	- love to learn new things everyday	<p>
-				<p>	- always think on solving a problem through technology, no matter how insignificant the problem is<p>
-				<p>	- feel i can communicate well<p>
+                <p> - 2+ years of web development experience in ASP.NET CORE MVC </p>
+				<p>	- Experience in writing Entity Framework and PostgreSQL queries.</p>
+				<p>	- Hands-on experience in integrating different modules of logistics platform and the implementation of projects that		  involved integration with .Net based systems.<p>
+				<p>	- Good in code reviews and code debugging skills.<p>
+				<p>	- Good at working independently and collaboratively in team	<p>
             </div>
 
             <div class="col-six tab-full right">
@@ -148,25 +145,25 @@
                     <strong>HTML5</strong>
                     </li>
                     <li>
-                    <div class="progress percent85"><span>80%</span></div>
-                    <strong>CSS3 / Bootstrap</strong>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>CSS3 / Bootstrap / SyncFusion</strong>
                     </li>
                     <li>
                     <div class="progress percent70"><span>70%</span></div>
-                    <strong>JavaScript</strong>
+                    <strong>JavaScript / JQuery</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>70%</span></div>
-                    <strong>.Net Core with c#</strong>
-                    </li>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>.Net Core Framework with C#, EF Core, LINQ</strong>
+                    </li>                     
                     <li>
-                    <div class="progress percent75"><span>50%</span></div>
-                    <strong>NodeJs with PostGres</strong>
-                    </li>   
-                    <li>
-                    <div class="progress percent90"><span>60%</span></div>
-                    <strong>Postgres / Oracle</strong>
-                    </li>   
+                    <div class="progress percent70"><span>70%</span></div>
+                    <strong>PostgresSQL / Oracle</strong>
+                    </li>  
+					<li>
+                    <div class="progress percent60"><span>60%</span></div>
+                    <strong>NodeJs with PostGresSQL</strong>
+                    </li>  
                 </ul>
             </div>
 
@@ -174,12 +171,12 @@
 
         <div class="row about-content about-content--buttons">
 
-            <div class="col-six tab-full left">
+            <div class="col-twelve tab-full left">
                 <a href="#0" class="btn btn--primary full-width">Download My CV</a>
             </div>
-            <div class="col-six tab-full right">
+            <!--<div class="col-six tab-full right">
                 <a href="#0" class="btn full-width">Hire Me Now</a>
-            </div>
+            </div>-->
 
         </div> <!-- end about-content buttons -->
 
@@ -187,6 +184,13 @@
 
             <div class="col-full text-center">
                 <h3>My Work Experience.</h3>
+				<h4>Roles Played</h4>
+				<div class="timeline__desc">
+					<p>- Technical Coordinator</p>
+					<p>- Involved in build/maintenance of architectural framework</p>
+					<p>- Part of R&D Team</p>
+					<p>- Involved in Requirment gathering/Gap Study/Client Interaction</p>
+				</div>
             </div>
 
             <div class="col-six tab-full left">
@@ -195,12 +199,16 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">May 2017 - Present</p>
-                            <h3>eBMS Software Solutions</h3>
-                            <h5>Technical Coordinator</h5>
+                            <p class="timeline__timeframe">March 2018 - Present</p>
+                            <h3>Project - NVOCC and Agency Solution</h3>
+                            <h5>Client - Goodrich Maritime Pvt Ltd, Mumbai</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi.</p>
+                            <p>- Rates management and integration to documentation</p>
+							<p>- Container inventory management</p>
+							<p>- Integration to EDI files where required</p>
+							<p>- Real time Load list and Manifest from Load port to Discharge port</p>
+							<p>- funds management of NVOCC principals with real time SOA</p>
                         </div>
                     </div> <!-- end timeline__block -->                    
 
@@ -213,12 +221,61 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">March 2017 - May 2017</p>
-                            <h3>College Project</h3>
-                            <h5>Online Wallet</h5>
+                            <p class="timeline__timeframe">July 2017 - Febraury 2018</p>
+                            <h3>Project - Transport Solution</h3>
+                            <h5>Client - Ali Reza, Saudi Arabia</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat.</p>
+                            <p>- a plug and play logistics solution for both own fleet and hired fleet</p>
+                            <p>- Customer Contract, Rate Request, Trip Allotment, Booking</p>
+                            <p>- Job Card, Fleet Management</p>
+							<p>- Equipment movement tracking module</p>
+							<p>- Work order Module</p>
+							<p>- Repair Module</p>
+                        </div>
+                    </div> <!-- end timeline__block -->                   
+
+                </div> <!-- end timeline -->
+            </div> <!-- end right -->
+
+			<div class="col-six tab-full left">
+                <div class="timeline">
+
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">March 2016 - June 2017</p>
+                            <h3>Project - Freight Forwarding</h3>
+                            <h5>Client - Orchid Shipping Pvt Ltd, Mumbai</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>- FCL, Air Freight, LCL consolidations</p>
+							<p>- Track Jobs and Job costing by estimating margins right from enquiry stage</p>
+							<p>- Tracking estimated and actual costs and margins Job Wise</p>
+							<p>- Better financial management due to real time invoicing and receivables management</p>
+                        </div>
+                    </div> <!-- end timeline__block -->                    
+
+                </div> <!-- end timeline -->
+            </div> <!-- end left -->
+
+            <div class="col-six tab-full right">
+                <div class="timeline">
+
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">May 2016 - June 2017</p>
+                            <h3>Project - eSales Dialog</h3>
+                            <h5>Client - Orchid Shipping Pvt Ltd, Mumbai | Freight Bridge Logistics, Mumbai</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>- Sales team’s activities Planning</p>
+                            <p>- Recording sales interactions ( Sales dialogues)</p>
+                            <p>- Update of meetings/ interactions</p>
+                            <p>- Update of prospect information</p>
+                            <p>- Prospect analysis</p>
+                            <p>- Analysis of sales persons performances</p>
                         </div>
                     </div> <!-- end timeline__block -->                   
 
@@ -415,7 +472,7 @@
                 <p>Mobile: +91 9094893494</p>
 
                 <h4 class="h06">Email</h4>
-                <p>ebmsfazal@gmail.com</p>
+                <p>fazalilahi666@gmail.com</p>
 
                 <h4 class="h06">Address</h4>
                 <p>Chennai, Tamil Nadu
